core/main/default/objects/HttpRequestService__mdt/HttpRequestService__mdt.object-meta.xml
<CustomObject>
    <description>List all external services endpoint</description>
    <label>Http Request Service</label>
    <pluralLabel>Http Request Services</pluralLabel>
</CustomObject>