core/main/default/objects/HttpRequestService__mdt/fields/BypassPrimaryEndpointPermission__c.field-meta.xml
<CustomField>
    <fullName>BypassPrimaryEndpointPermission__c</fullName>
    <description>Custom Permission name, used to fallback to secondary named endpoint if the custom permission is set for a user</description>
    <label>Bypass Primary Endpoint Permission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>