core/main/default/objects/HttpRequestService__mdt/fields/CustomHeaders__c.field-meta.xml
<CustomField>
    <fullName>CustomHeaders__c</fullName>
    <description>JSON key/value structure to provide headers to add to the request</description>
    <label>Custom Headers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>