core/main/default/objects/HttpRequestService__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Every information related to this service</description>
    <inlineHelpText>Every information related to this service</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>