core/main/default/objects/HttpRequestService__mdt/fields/ForceSecondaryEndpoint__c.field-meta.xml
<CustomField>
    <fullName>ForceSecondaryEndpoint__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Force the use of secondary named endpoint for all users</description>
    <label>Force Secondary Endpoint</label>
    <type>Checkbox</type>
</CustomField>