core/main/default/objects/HttpRequestService__mdt/fields/PrimaryNamedEndpoint__c.field-meta.xml
<CustomField>
    <fullName>PrimaryNamedEndpoint__c</fullName>
    <description>Named credentials of the primary endpoint</description>
    <label>Primary Named Endpoint</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>