core/main/default/objects/HttpRequestService__mdt/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <description>the path to the resource to call</description>
    <label>Resource</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>