core/main/default/objects/HttpRequestService__mdt/fields/SecondaryNamedEndpoint__c.field-meta.xml
<CustomField>
    <fullName>SecondaryNamedEndpoint__c</fullName>
    <description>Named credentials of the secondary endpoint used for fallback or mock</description>
    <label>Secondary Named Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>