core/main/default/objects/HttpRequestService__mdt/fields/ServiceId__c.field-meta.xml
<CustomField>
    <fullName>ServiceId__c</fullName>
    <description>Technical Id used in test context</description>
    <inlineHelpText>Technical Id used in test context</inlineHelpText>
    <label>Service Id</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>