core/main/default/objects/HttpRequestService__mdt/fields/Timeout__c.field-meta.xml
<CustomField>
    <fullName>Timeout__c</fullName>
    <defaultValue>120000</defaultValue>
    <description>Timeout value in ms</description>
    <inlineHelpText>Timeout value in ms</inlineHelpText>
    <label>Timeout</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>