core/main/default/objects/HttpRequestService__mdt/fields/TrackingEnabled__c.field-meta.xml
<CustomField>
    <fullName>TrackingEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When tracking is enabled globally, this option allow to enable/disable tracking locally</description>
    <inlineHelpText>When tracking is enabled globally, this option allow to enable/disable tracking locally</inlineHelpText>
    <label>Tracking Enabled?</label>
    <type>Checkbox</type>
</CustomField>