core/main/default/objects/HttpRequestService__mdt/listViews/FullView.listView-meta.xml
<ListView>
    <fullName>FullView</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>ServiceId__c</columns>
    <columns>PrimaryNamedEndpoint__c</columns>
    <columns>Resource__c</columns>
    <columns>TrackingEnabled__c</columns>
    <columns>BypassPrimaryEndpointPermission__c</columns>
    <columns>ForceSecondaryEndpoint__c</columns>
    <columns>SecondaryNamedEndpoint__c</columns>
    <columns>Timeout__c</columns>
    <filterScope>Everything</filterScope>
    <label>Full View</label>
    <language>en_US</language>
</ListView>